fix: fix pixelperfect shift in page-pricing section

--- a/src/scss/general.scss
+++ b/src/scss/general.scss
@@ -73,6 +73,8 @@ h4 {
   @for $i from 1 through 7 {
     &-size-#{$i} {
       font-size: list.nth($fz-list, $i);
+
+      line-height: 1.5em;
     }
   }
 }
@@ -88,7 +90,7 @@ h4 {
 
   width: 1200px;
 
-  @include mixins.test-border;
+  // @include mixins.test-border;
 }
 
 .bg {
@@ -151,6 +153,7 @@ h4 {
     box-sizing: border-box;
 
     width: 100%;
+
     padding: 0 20px;
   }
 
@@ -158,4 +161,8 @@ h4 {
     width: 100%;
     height: auto;
   }
+}
+
+.test-border {
+  border: 1px solid red;
 }
